--- a/app/src/main/assets/web/page.css
+++ b/app/src/main/assets/web/page.css
@@ -14,6 +14,11 @@ body.dark {
   display: inline;
 }
 
+.control-bottom {
+  text-align: right;
+  margin-bottom: 10px;
+}
+
 .spacer {
   margin-left: 30px;
 }
